force-app/main/default/objects/Test_Run__c/fields/Failure_Summary__c.field-meta.xml
<CustomField>
    <fullName>Failure_Summary__c</fullName>
    <description>Summary of failed tests</description>
    <label>Failure Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>