force-app/main/default/objects/Test_Run__c/fields/New_Failures__c.field-meta.xml
<CustomField>
    <fullName>New_Failures__c</fullName>
    <label>New Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>