force-app/main/default/objects/Test_Run__c/fields/New_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>New_Test_Failures__c</fullName>
    <description>Number of new test failures</description>
    <label>New Test Failures</label>
    <summaryFilterItems>
        <field>Test_Run_Method_Result__c.New_Failure__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>