force-app/main/default/objects/Test_Run__c/fields/Parent_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Parent Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>