force-app/main/default/objects/Test_Run__c/fields/Parent_Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>Parent_Job_Ids__c</fullName>
    <externalId>true</externalId>
    <label>Parent Job Ids</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>