force-app/main/default/objects/Test_Run__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the test run has completed and has been processed by the TestRunner package.</description>
    <inlineHelpText>True when the test run has completed and has been processed by the TestRunner package.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>