force-app/main/default/objects/Test_Run__c/fields/Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>Test_Failures__c</fullName>
    <label>Test Failures</label>
    <summaryFilterItems>
        <field>Test_Run_Method_Result__c.Method_Pass__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>