force-app/main/default/objects/Test_Run__c/fields/Total_Classes__c.field-meta.xml
<CustomField>
    <fullName>Total_Classes__c</fullName>
    <label>Total Classes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>