force-app/main/default/objects/Test_Run__c/fields/Total_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Run_Time__c</fullName>
    <label>Total Run Time</label>
    <summarizedField>Test_Run_Method_Result__c.Run_Time__c</summarizedField>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>